<resources>
    <string name="app_name">Gardion</string>
    <string name="main_activity_name">Gardion</string>
    <string name="show_log">View log</string>
    <string name="search">Search</string>
    <string name="vpn_not_supported_title">VPN not supported</string>
    <string name="vpn_not_supported">Your device does not support VPN applications.\nPlease contact the manufacturer.</string>
    <string name="vpn_not_supported_during_lockdown">VPN connections are not supported in lockdown mode.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="profile_not_found">Profile not found</string>
    <string name="gardion_shortcut">Gardion shortcut</string>
    <string name="log_title">Log</string>
    <string name="send_log">Send log file</string>
    <string name="empty_log">Log file is empty</string>
    <string name="log_mail_subject">Gardion %1$s Log File</string>
    <string name="no_profiles">No VPN profiles.</string>
    <string name="add_profile">Add VPN profile</string>
    <string name="edit_profile">Edit</string>
    <string name="delete_profile">Delete</string>
    <string name="select_profiles">Select profiles</string>
    <string name="profiles_deleted">Selected profiles deleted</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="one_profile_selected">One profile selected</string>
    <string name="x_profiles_selected">%1$d profiles selected</string>
    <string name="profile_edit_save">Save</string>
    <string name="profile_edit_import">Import</string>
    <string name="profile_edit_cancel">Cancel</string>
    <string name="profile_name_label">Profile name (optional)</string>
    <string name="profile_name_label_simple">Profile name</string>
    <string name="profile_name_hint">Defaults to the configured server</string>
    <string name="profile_name_hint_gateway">Defaults to \"%1$s\"</string>
    <string name="profile_gateway_label">Server</string>
    <string name="profile_gateway_hint">IP address or hostname of the VPN server</string>
    <string name="profile_vpn_type_label">VPN Type</string>
    <string name="profile_username_label">Username</string>
    <string name="profile_password_label">Password (optional)</string>
    <string name="profile_password_hint">Leave blank to get prompted on demand</string>
    <string name="profile_user_certificate_label">User certificate</string>
    <string name="profile_user_select_certificate_label">Select user certificate</string>
    <string name="profile_user_select_certificate">Select a specific user certificate</string>
    <string name="profile_user_select_id_label">User identity</string>
    <string name="profile_user_select_id_init">Select a certificate first</string>
    <string name="profile_user_select_id_default">Default (%1$s)</string>
    <string name="profile_ca_label">CA certificate</string>
    <string name="profile_ca_auto_label">Select automatically</string>
    <string name="profile_ca_select_certificate_label">Select CA certificate</string>
    <string name="profile_ca_select_certificate">Select a specific CA certificate</string>
    <string name="profile_advanced_label">Advanced settings</string>
    <string name="profile_show_advanced_label">Show advanced settings</string>
    <string name="profile_remote_id_label">Server identity</string>
    <string name="profile_remote_id_hint">Defaults to the configured server. Custom values are explicitly sent to the server and enforced during authentication</string>
    <string name="profile_remote_id_hint_gateway">Defaults to \"%1$s\". Custom values are explicitly sent to the server and enforced during authentication</string>
    <string name="profile_mtu_label">MTU of the VPN tunnel device</string>
    <string name="profile_mtu_hint">In case the default value is unsuitable for a particular network</string>
    <string name="profile_port_label">Server port</string>
    <string name="profile_port_hint">UDP port to connect to, if different from the default</string>
    <string name="profile_nat_keepalive_label">NAT-T keepalive interval</string>
    <string name="profile_nat_keepalive_hint">Small packets are sent to keep mappings on NAT routers alive if there is no other traffic. In order to save energy the default interval is 45 seconds. Behind NAT routers that remove mappings early this might be too high, try 20 seconds or less in that case.</string>
    <string name="profile_cert_req_label">Send certificate requests</string>
    <string name="profile_cert_req_hint">Certificate requests are sent for all available or selected CA certificates. To reduce the size of the IKE_AUTH message this can be disabled. However, this only works if the server sends its certificate even if it didn\'t receive any certificate requests.</string>
    <string name="profile_split_tunneling_label">Split tunneling</string>
    <string name="profile_split_tunneling_intro">By default, the client will route all network traffic through the VPN, unless the server narrows the subnets when the connection is established, in which case only traffic the server allows will be routed via VPN (by default, all other traffic is routed as if there was no VPN).</string>
    <string name="profile_split_tunnelingv4_title">Block IPv4 traffic not destined for the VPN</string>
    <string name="profile_split_tunnelingv6_title">Block IPv6 traffic not destined for the VPN</string>
    <string name="profile_included_subnets_label">Custom subnets</string>
    <string name="profile_included_subnets_hint">Only route traffic to specific subnets via VPN, everything else is routed as if there was no VPN (separated by spaces, e.g. \"192.168.1.0/24 2001:db8::/64\")</string>
    <string name="profile_excluded_subnets_label">Excluded subnets</string>
    <string name="profile_excluded_subnets_hint">Traffic to these subnets will not be routed via VPN, but as if there was no VPN (separated by spaces, e.g. \"192.168.1.0/24 2001:db8::/64\")</string>
    <string name="profile_select_apps_label">Applications</string>
    <string name="profile_select_apps">Select applications</string>
    <string name="profile_select_no_apps">No applications selected</string>
    <string name="profile_select_one_app">One application selected</string>
    <string name="profile_select_x_apps">%1$d applications selected</string>
    <string name="profile_proposals_label">Algorithms</string>
    <string name="profile_proposals_intro">Optionally configure specific algorithms to use for IKEv2 and/or IPsec/ESP instead of the defaults. Refer to our wiki for a <a href="https://wiki.strongswan.org/projects/strongswan/wiki/IKEv2CipherSuites">list of algorithm identifiers</a> (note that not all are supported by this app). Both fields take a list of algorithms, each separated by a hyphen.</string>
    <string name="profile_proposals_ike_label">IKEv2 Algorithms</string>
    <string name="profile_proposals_ike_hint">For non-AEAD/classic encryption algorithms, an integrity algorithm, a pseudo random function (optional, defaults to one based on the integrity algorithm) and a Diffie-Hellman group are required (e.g. aes256-sha256-ecp256). For combined-mode/AEAD algorithms, the integrity algorithm is omitted but a PRF is required (e.g. aes256gcm16-prfsha256-ecp256).</string>
    <string name="profile_proposals_esp_label">IPsec/ESP Algorithms</string>
    <string name="profile_proposals_esp_hint">For non-AEAD/classic encryption algorithms, an integrity algorithm is required, a Diffie-Hellman group is optional (e.g. aes256-sha256 or aes256-sha256-ecp256). For combined-mode/AEAD algorithms, the integrity algorithm is omitted (e.g. aes256gcm16 or aes256gcm16-ecp256). If a DH group is specified IPsec SA rekeying will use a DH key exchange. However, DH groups specified here are not used when the connection is established initially because the keys there are derived from the IKE SA key material. Therefore, any configuration mismatch with the server will only cause errors later during rekeying.</string>
    <string name="profile_import">Import VPN profile</string>
    <string name="profile_import_failed">Failed to import VPN profile</string>
    <string name="profile_import_failed_detail">Failed to import VPN profile: %1$s</string>
    <string name="profile_import_failed_not_found">File not found</string>
    <string name="profile_import_failed_host">Host unknown</string>
    <string name="profile_import_failed_tls">TLS handshake failed</string>
    <string name="profile_import_failed_value">Invalid value in \"%1$s\"</string>
    <string name="profile_import_exists">This VPN profile already exists, its current settings will be replaced.</string>
    <string name="profile_cert_import">Import certificate from VPN profile</string>
    <string name="profile_cert_alias">Certificate for \"%1$s\"</string>
    <string name="alert_text_no_input_gateway">A value is required to initiate the connection</string>
    <string name="alert_text_no_input_username">Please enter your username </string>
    <string name="alert_text_nocertfound_title">No CA certificate selected</string>
    <string name="alert_text_nocertfound">Please select one or activate <i>Select automatically</i></string>
    <string name="alert_text_out_of_range">Please enter a number in the range from %1$d - %2$d</string>
    <string name="alert_text_no_subnets">Please enter valid subnets and/or IP addresses, separated by spaces</string>
    <string name="alert_text_no_proposal">Please enter a valid list of algorithms, separated by hyphens</string>
    <string name="tnc_notice_title">EAP-TNC may affect your privacy</string>
    <string name="tnc_notice_subtitle">Device data is sent to the server operator</string>
    <string name="tnc_notice_details"><![CDATA[<p>Trusted Network Connect (TNC) allows server operators to assess the health of a client device.</p><p>For that purpose the server operator may request data such as a unique identifier, a list of installed packages, system settings, or cryptographic checksums of files.</p><b>Any data will be sent only after verifying the server\'s identity.</b>]]></string>
    <string name="trusted_certs_title">CA certificates</string>
    <string name="no_certificates">No certificates</string>
    <string name="reload_trusted_certs">Reload CA certificates</string>
    <string name="system_tab">System</string>
    <string name="user_tab">User</string>
    <string name="local_tab">Imported</string>
    <string name="delete_certificate_question">Delete certificate?</string>
    <string name="delete_certificate">The certificate will be permanently removed!</string>
    <string name="import_certificate">Import certificate</string>
    <string name="cert_imported_successfully">Certificate successfully imported</string>
    <string name="cert_import_failed">Failed to import certificate</string>
    <string name="crl_cache">CRL cache</string>
    <string name="clear_crl_cache_title">Clear CRL cache?</string>
    <string name="all_button_contact_support">Support</string>
    <string name="certificate_infotext">Um Sie sicher mit Gardion zu verbinden, werden wir nun ein Zertifikat auf diesem Gerät installieren. Bitte wählen Sie hierzu \"Zertifikat installieren" aus. Im folgen Dialog bestätigen Sie bitte mit \"OK\" die Installation des Zertifikats. \nIm nächsten Schritt bestätigen Sie nochmals mit "Auswählen" das Zertifikat "Gardion User". </string>
    <string name="certificate_button_setup">Zertifikat installieren</string>
    <string name="show_parent_pin_infotext">Damit nur Sie Gardion auf diesem Gerät wieder deaktivieren können, habe wir eine Eltern-PIN hinterlegt. Die Eltern-PIN lautet:</string>
    <string name="parent_pin_view_default">PIN</string>
    <string name="show_parent_pin2_infotext">Die Eltern-PIN können sie auch auf www.gardion.com nachschauen, nachdem Sie sich eingeloggt haben.</string>
    <string name="show_parent_pin_next_button">Weiter</string>
</resources>